templates/k8sdisallowanonymous.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowanonymous
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowAnonymous
      validation:
        legacySchema: false
        openAPIV3Schema:
          properties:
            allowedRoles:
              description: The list of ClusterRoles and Roles that may be associated
                with the `system:unauthenticated` group and `system:anonymous` user.
              items:
                type: string
              type: array
          type: object
  targets:
  - rego: |
      package k8sdisallowanonymous

      violation[{"msg": msg}] {
        not is_allowed(input.review.object.roleRef, input.parameters.allowedRoles)
        review(input.review.object.subjects[_])
        msg := sprintf("Unauthenticated user reference is not allowed in %v %v ", [input.review.object.kind, input.review.object.metadata.name])
      }

      is_allowed(role, allowedRoles) {
        role.name == allowedRoles[_]
      }

      review(subject) = true {
        subject.name == "system:unauthenticated"
      }

      review(subject) = true {
        subject.name == "system:anonymous"
      }
    target: admission.k8s.gatekeeper.sh
